--- a/Elm/package.json
+++ b/Elm/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "elm-live": "^4.0.0-rc.1",
     "elm-test": "^0.19.1-revision7"
   }
 }
